
image:screenshot-edit-name.png["Ein Screenshot, der die Möglichkeit zeigt, Ihren Namen unter Benutzereinstellungen zu bearbeiten."]

Die Bearbeitung Ihres Namens wird nicht unterstützt, wenn Sie sich mit einer Verbundverbindung oder mit Ihrem NetApp Support-Website-Konto anmelden.



== 11 Januar 2024



=== Anschluss 3.9.36

Diese Version enthält kleinere Verbesserungen, Fehlerbehebungen und Unterstützung für den Connector in den folgenden Cloud-Regionen:

* Der Region Israel (Tel Aviv) in AWS
* Die Region Saudi-Arabien in Google Cloud




== Bis 5. Dezember 2023



=== Freigabe des privaten Modus

Für BlueXP ist jetzt eine neue Version des privaten Modus verfügbar. Diese Version enthält Version 3.9.35 des Connectors sowie Versionen der BlueXP Services, die ab Oktober 2023 im Privatmodus unterstützt werden.

Diese neue Version kann von der NetApp Support-Website heruntergeladen werden.

* https://docs.netapp.com/us-en/bluexp-setup-admin/concept-modes.html#private-mode["Informieren Sie sich über die im Private-Mode enthaltenen BlueXP Services"]
* https://docs.netapp.com/us-en/bluexp-setup-admin/task-quick-start-private-mode.html["Erfahren Sie mehr über die ersten Schritte mit BlueXP im privaten Modus"]
* https://docs.netapp.com/us-en/bluexp-setup-admin/task-managing-connectors.html#upgrade-the-connector-when-using-private-mode["Erfahren Sie, wie Sie den Connector bei der Verwendung des privaten Modus aktualisieren"]




== Bis 8. November 2023



=== Anschluss 3.9.35

Diese Version enthält kleinere Sicherheitsverbesserungen und Fehlerbehebungen.



== 6 Oktober 2023



=== Anschluss 3.9.34

Diese Version enthält kleinere Verbesserungen und Fehlerbehebungen.



== 10 September 2023



=== Anschluss 3.9.33

* Wenn Sie einen Connector in AWS von BlueXP erstellen, können Sie nun im Feld Schlüsselpaar suchen, um das Schlüsselpaar, das Sie mit der Connector-Instanz verwenden möchten, einfacher zu finden.
+