@@ -1525,7 +1525,6 @@
   <block id="6802f2d551252ff38d10cfab7b7735b3" category="paragraph">Diese Einschränkungen gelten insbesondere für die Einrichtung und Administration von BlueXP: Der Connector, die SaaS-Plattform und vieles mehr.</block>
   <block id="83e566847d42782b3343e108150d7f57" category="section-title">Einschränkungen an den Anschlüssen</block>
   <block id="cf4525e15b866700f10e91573643ba54" category="section-title">Die standardmäßigen EC2-Instanzeinstellungen sollten nicht geändert werden</block>
-  <block id="505d2a7358228b26711e097c3ca6dc24" category="paragraph">Wenn Sie den Connector in AWS implementieren, sind die folgenden EC2-Instanzeinstellungen standardmäßig konfiguriert:</block>
   <block id="b6c588d5cb8cbc221e66a15877aed30a" category="list-text">IMDSv2 ist auf optional eingestellt</block>
   <block id="b29d18da75a3c01939275500a8fc2e70" category="list-text">HttpTokens ist auf optional gesetzt</block>
   <block id="a91c1c121088ffbd72985e0bf2459f87" category="paragraph">Diese Einstellungen sollten nicht in erforderlich geändert werden. Wenn Sie diese Einstellungen auf „erforderlich“ ändern, wird die Verfügbarkeit von Connector und Cloud Volumes ONTAP beeinträchtigt.</block>
@@ -3865,4 +3864,16 @@ Dieser Teil der Tabelle listet die Unterstützung für das Management der Arbeit
   <block id="bf032cb5bcb45fec81b7b5b993ebabe4" category="paragraph">Sie müssen den Backup-Speicherort für jedes Cloud Volumes ONTAP-System aktualisieren.</block>
   <block id="2a066cad1fef063fff0ca56b5d416b10" category="list-text">Führen Sie den folgenden Befehl über die Cloud Volumes ONTAP-CLI aus, um das aktuelle Backup-Ziel anzuzeigen:</block>
   <block id="78cae36205d703274f695ea4e85f6ffe" category="list-text">Führen Sie den folgenden Befehl aus, um die IP-Adresse für das Backup-Ziel zu aktualisieren:</block>
+  <block id="375a8301ce4caf38298dba148206d69c" category="section-title">IMDSv1 ist auf EC2-Instanzen erforderlich</block>
+  <block id="997791080d6fcd216110fbfe145cef98" category="paragraph">Bevor Sie die Connector-Software manuell auf einer EC2-Instanz in AWS installieren, wenn Sie den Standard- oder eingeschränkten Modus verwenden, müssen Sie sicherstellen, dass die EC2-Instanz den Instance Metadata Service Version 1 (IMDSv1) verwendet. Der Connector wird von IMDSv2 nicht unterstützt.</block>
+  <block id="95371958414dbd4f614d7ff8348b9b31" category="paragraph">Da IMDSv2 jetzt die Standardversion auf einer neuen EC2-Instanz ist, müssen Sie die Instanzmetadaten-Optionen ändern, um die Verwendung von IMDSv1 wiederherzustellen.</block>
+  <block id="c637448044ff305c64a7c1cd8b77b196" category="inline-link">AWS Dokumentation: Stellen Sie die Verwendung von IMDSv1 wieder her</block>
+  <block id="dd3ddc1f5982d8946100b097e7993378" category="paragraph"><block ref="dd3ddc1f5982d8946100b097e7993378" category="inline-link-rx"></block></block>
+  <block id="1dd4f77b0b91e0fcf80bc700a9a86fd6" category="paragraph">Wenn Sie den Connector aus BlueXP oder aus dem AWS Marketplace in AWS implementieren, sind die folgenden Einstellungen für die EC2 Instanz standardmäßig konfiguriert:</block>
+  <block id="a781cb38c0c2c5288c02850fcd3cda7d" category="list-text">IMDSv1</block>
+  <block id="1b863f7993d117f5ab767043f7a0bcdb" category="list-text">Der Instance Metadata Service Version 1 (IMDSv1) ist auf EC2-Instanzen erforderlich. Der Connector wird von IMDSv2 nicht unterstützt.</block>
+  <block id="7626696bd9f21a6589ce40ea53af6046" category="section-title">Anforderung für den Metadatenservice für die Amazon EC2 Instanz</block>
+  <block id="bce093b82ba18b11f0951a0e0b61a538" category="paragraph">Sie sollten beachten, dass IMDSv1 auf EC2-Instanzen erforderlich ist, bevor Sie die Connector-Software manuell in AWS installieren.</block>
+  <block id="f8197842b4e7ad7b7b15ef36dcb4ae78" category="inline-link-macro">Erfahren Sie mehr über die Anforderung an IMDSv1 in AWS</block>
+  <block id="b305801a6c9c8eadb3e6439dc658aaa8" category="paragraph"><block ref="785f731db3565bf64fce6692ea6b4a4a" category="inline-link-macro-rx"></block>.</block>
 </blocks>
