@@ -24,9 +24,19 @@ Diese Einschränkungen gelten insbesondere für die Einrichtung und Administrati
 
 
 
+=== IMDSv1 ist auf EC2-Instanzen erforderlich
+
+Bevor Sie die Connector-Software manuell auf einer EC2-Instanz in AWS installieren, wenn Sie den Standard- oder eingeschränkten Modus verwenden, müssen Sie sicherstellen, dass die EC2-Instanz den Instance Metadata Service Version 1 (IMDSv1) verwendet. Der Connector wird von IMDSv2 nicht unterstützt.
+
+Da IMDSv2 jetzt die Standardversion auf einer neuen EC2-Instanz ist, müssen Sie die Instanzmetadaten-Optionen ändern, um die Verwendung von IMDSv1 wiederherzustellen.
+
+https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/configuring-IMDS-existing-instances.html#modify-restore-IMDSv1["AWS Dokumentation: Stellen Sie die Verwendung von IMDSv1 wieder her"^]
+
+
+
 === Die standardmäßigen EC2-Instanzeinstellungen sollten nicht geändert werden
 
-Wenn Sie den Connector in AWS implementieren, sind die folgenden EC2-Instanzeinstellungen standardmäßig konfiguriert:
+Wenn Sie den Connector aus BlueXP oder aus dem AWS Marketplace in AWS implementieren, sind die folgenden Einstellungen für die EC2 Instanz standardmäßig konfiguriert:
 
 * IMDSv2 ist auf optional eingestellt
 * HttpTokens ist auf optional gesetzt
